--- a/teaching/f2023_calc2.html
+++ b/teaching/f2023_calc2.html
@@ -38,6 +38,7 @@
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
  -->
+2023-09-22: If you have any opinion about make-up class schedule for October 3th and 24th classes, please email me by Monday, September 25th noon.<br>    
 2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below. This day is the make-up day for the CBNU anniversary (Wednesday September 27th). <br>   
 2023-09-13: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>    
 2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>    
@@ -131,6 +132,13 @@ Detailed announcement will be followed in due time.<br><br>
  
 -->
 
+<h2><p>Make-up class schedules</p></h2>
+Tuesday, October 3rd 10:00 session will meet on <b>Wednesday, October 4th 17:00</b>b><br>
+Tuesday, October 3rd 11:00 session will meet on <b>Wednesday, October 11th 17:00</b>b><br>
+Tuesday, October 24th 10:00 session will meet on <b>Wednesday, October 18th 17:00</b>b><br> 
+ 
+
+ 
 <h2><p>Links</p></h2>
 <a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
 <a href="https://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
