--- a/teaching/f2023_calc2.html
+++ b/teaching/f2023_calc2.html
@@ -133,9 +133,9 @@ Detailed announcement will be followed in due time.<br><br>
 -->
 
 <h2><p>Make-up class schedules</p></h2>
-Tuesday, October 3rd 10:00 session will meet on <b>Wednesday, October 4th 17:00</b>b><br>
-Tuesday, October 3rd 11:00 session will meet on <b>Wednesday, October 11th 17:00</b>b><br>
-Tuesday, October 24th 10:00 session will meet on <b>Wednesday, October 18th 17:00</b>b><br> 
+Tuesday, October 3rd 10:00 session will meet on <b>Wednesday, October 4th 17:00</b><br>
+Tuesday, October 3rd 11:00 session will meet on <b>Wednesday, October 11th 17:00</b><br>
+Tuesday, October 24th 10:00 session will meet on <b>Wednesday, October 18th 17:00</b><br> 
  
 
  
