--- a/teaching/f2023_dg2.html
+++ b/teaching/f2023_dg2.html
@@ -14,7 +14,7 @@
 <!-- FONT SIZE SPECIFICATION-->
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
-<b>Office Hours:</b> Tuesdays 18:00--18:50 at E1-1 #110 or by appointment.<br> 
+<b>Office Hours:</b> Tuesdays 17:00--17:50 at E1-1 #110 or by appointment.<br> 
 <b>Syllabus:</b>  <a href="f2023_dg2/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
 
@@ -35,6 +35,7 @@
 2022-09-01: The courseoutline has been updated. See above.<br>
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2023-09-22: We will not meet on September 27th CBNU anniversary. We will make-up the 100-minute as a final exam on December 15th.<br>
 2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below. This day is the make-up day for the CBNU anniversary (Wednesday September 27th).<br>     
 2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2023-09-01: <b>Announcements</b> <a href="../teaching/f2023_calc2/2023-09-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
