--- a/teaching/f2023_calc2.html
+++ b/teaching/f2023_calc2.html
@@ -38,6 +38,10 @@
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
  -->
+2023-09-27: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>    
+2023-09-27: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>    
+2023-09-27: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>    
+2023-09-27: Make-up class schedule for October 3th and 24th classes has been posted below.<br>    
 2023-09-22: If you have any opinion about make-up class schedule for October 3th and 24th classes, please email me by Monday, September 25th noon. Please read the email announcement.<br>    
 2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below. This day is the make-up day for the CBNU anniversary (Wednesday September 27th). <br>   
 2023-09-13: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>    
@@ -57,21 +61,19 @@ Section 9.5: #1, 2, 3, 4.<br>
 Section 9.6: #3.<br>
 Section 9.8: #1, 3, 4.<br><br>
  
-
-  <!--
-<b>Homework  #3</b> 15 problems.<br>  
-
- 
-<b>Homework  #4</b> 17 problems.<br>
+<b>Homework  #3</b> 17 problems.<br>  
 Section 10.1: #3, 4.<br>
 Section 10.2: #1, 2, 3, 4, 7.<br>
 Section 10.3: #3, 4, 5, 7.<br>
-Section 10.5: #1, 2, 3, 4, 5, 6.<br><br>
+Section 10.5: #1, 2, 3, 4, 5, 6.<br><br> 
 
-<b>Homework  #5</b> 13 problems.<br>
+<b>Homework  #4</b> 13 problems.<br>
 Section 10.6: #1, 2, 3, 4, 6, 7, 8.<br>
 Section 10.7: #1, 2, 3[(1),(2)], 5, 6.<br>
 Section 10.9: #1.<br><br>
+ 
+ <!--
+<b>Homework  #5</b> 13 problems.<br>
  
 <b>Homework  #6</b> 13 problems.<br>
 Section 11.2: #1, 2, 3, 5.<br>
@@ -94,7 +96,12 @@ Section 12.7: #2, 5, 6, 7, 8, 9, 10.<br><br>
 
  <h2><p>Exam Schedules</p></h2>
 
-1st midterm Exam: TBA<br><br>
+1st midterm Exam: <FONT COLOR="#C40062">04 October (Wednesday),</FONT> In-class.<br>
+- Coverage: Chapter 9.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+<br>
+ 
 2nd midterm Exam: TBA<br><br>
 3rd midterm Exam: TBA<br><br>
    
@@ -103,11 +110,7 @@ Detailed announcement will be followed in due time.<br><br>
   
 <!--
   
-  1st midterm Exam: <FONT COLOR="#C40062">04 October (Tuesday),</FONT> In-class.<br>
-- Coverage: Chapter 8 Section 6 and Chapter 9.<br>
-- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
-  The average was 58.79. The maximum score achieved by a student was 100.<br><br>
+  
  
  2nd midterm Exam: <FONT COLOR="#C40062">08 November (Tuesday),</FONT> In-class.<br>
 - Coverage: Chapter 10.<br>
@@ -129,15 +132,12 @@ Detailed announcement will be followed in due time.<br><br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 - Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
  The average was 51.11. The maximum score achieved by a student was 100.<br><br>
- 
-
+--> 
 
 <h2><p>Make-up class schedules</p></h2>
 Tuesday, October 3rd 10:00 session will meet on <b>Wednesday, October 4th 17:00</b><br>
 Tuesday, October 3rd 11:00 session will meet on <b>Wednesday, October 11th 17:00</b><br>
 Tuesday, October 24th 10:00 session will meet on <b>Wednesday, October 18th 17:00</b><br> 
---> 
-
  
 <h2><p>Links</p></h2>
 <a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
