--- a/teaching/f2023_dg2.html
+++ b/teaching/f2023_dg2.html
@@ -35,7 +35,9 @@
 2022-09-01: The courseoutline has been updated. See above.<br>
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
-2023-09-22: We will not meet on September 27th CBNU anniversary. We will make-up the 100-minute as a final exam on December 15th.<br>
+2023-09-27: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br> 
+2023-09-27: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
+  2023-09-22: We will not meet on September 27th CBNU anniversary. We will make-up the 100-minute as a final exam on December 15th.<br>
 2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below. This day is the make-up day for the CBNU anniversary (Wednesday September 27th).<br>     
 2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2023-09-01: <b>Announcements</b> <a href="../teaching/f2023_calc2/2023-09-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
@@ -47,14 +49,17 @@
 Problems from Chapter 9 Part 1: #1, 2, 4, 6, 33, 34, 35, 37, 38, 40.<br>
 Problems from Chapter 9 Part 2: #7, 9, 12, 41, 42, 43.<br>  
   <br> 
-  
-  <!--
-    Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
-
 
 <b>Homework  #2</b> 14 problems.<br>  
+Problems from the National Exam: <a href="f2023_dg2/handout1.pdf" title="Selected problems from the national exam">Handout 1</a>.<br><br>  
+  
+<b>Homework  #3</b> 12 problems.<br>  
+Problems from Chapter 9 Part 3: #10, 21, 22, 44, 48.<br>
+Problems from Chapter 9 Part 4: #26, 27, 45, 46, 47, 52, 55.<br><br>  
 
-Problems from the National Exam: <a href="f2022_dg2/handout1.pdf" title="Selected problems from the national exam">Handout 1</a>.<br><br>  
+
+  <!--
+    Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
 
 <b>Homework  #3</b> 12 problems.<br>  
 Problems from Chapter 9 Part 3: #10, 21, 22, 44, 48.<br>
