--- a/teaching/f2023_dg2.html
+++ b/teaching/f2023_dg2.html
@@ -35,9 +35,10 @@
 2022-09-01: The courseoutline has been updated. See above.<br>
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2023-10-12: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> Details have been posted below.<br>     
 2023-09-27: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br> 
 2023-09-27: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
-  2023-09-22: We will not meet on September 27th CBNU anniversary. We will make-up the 100-minute as a final exam on December 15th.<br>
+2023-09-22: We will not meet on September 27th CBNU anniversary. We will make-up the 100-minute as a final exam on December 15th.<br>
 2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below. This day is the make-up day for the CBNU anniversary (Wednesday September 27th).<br>     
 2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2023-09-01: <b>Announcements</b> <a href="../teaching/f2023_calc2/2023-09-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
@@ -61,9 +62,7 @@ Problems from Chapter 9 Part 4: #26, 27, 45, 46, 47, 52, 55.<br><br>
   <!--
     Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
 
-<b>Homework  #3</b> 12 problems.<br>  
-Problems from Chapter 9 Part 3: #10, 21, 22, 44, 48.<br>
-Problems from Chapter 9 Part 4: #26, 27, 45, 46, 47, 52, 55.<br><br>  
+
   
 <b>Homework  #4</b> 13 problems.<br>
 Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br>
@@ -86,12 +85,21 @@ Problems from the National Exam: <a href="f2022_dg2/handout2.pdf" title="Selecte
 
 <h2><p>Exam Schedules</p></h2>
 
-Midterm Exam: TBA<br><br>
+Midterm Exam: <FONT COLOR="#C40062">25 October (Wednesday),</FONT> In-class.<br>
+- Coverage: Chapter 9 (up to what we cover by Ocyober 24th).<br>
+- Total 8 questions. There will be 1 set of T/F questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+  <br>
+
+
+  
   
 Final Exam: <FONT COLOR="#C40062">15 December (Friday),</FONT> 10:00--11:40 at E1-1 Room 136.<br>
 Detailed announcement will be followed in due time.<br><br>
   
 <!--  
+- The average was 62 and the maximum score achieved by a student was 97.<br><br>
+  
 1st midterm Exam: <FONT COLOR="#C40062">11 October (Tuesday),</FONT> In-class.<br>
 - Coverage: From Chapter 8 tangent vectors to Chapter 9 the first fundamental form.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
