--- a/teaching/f2023_calc2.html
+++ b/teaching/f2023_calc2.html
@@ -38,6 +38,10 @@
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
  -->
+2023-10-20: <FONT color="#FF00FF"><b>2nd midterm exam announcement</b></FONT> Details have been posted below.<br>     
+2023-10-20: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>    
+2023-10-20: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>     
+2023-10-20: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>    
 2023-10-05: The 1st midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Thursday, October 12th 17:59. Please read the email announcement for more details.<br>     
 2023-09-27: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>    
 2023-09-27: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>    
@@ -72,26 +76,27 @@ Section 10.5: #1, 2, 3, 4, 5, 6.<br><br>
 Section 10.6: #1, 2, 3, 4, 6, 7, 8.<br>
 Section 10.7: #1, 2, 3[(1),(2)], 5, 6.<br>
 Section 10.9: #1.<br><br>
- 
- <!--
+
 <b>Homework  #5</b> 13 problems.<br>
- 
-<b>Homework  #6</b> 13 problems.<br>
 Section 11.2: #1, 2, 3, 5.<br>
 Section 11.3: #1, 2, 4, 5, 6.<br>
 Section 11.4: #1, 2, 3, 4.<br><br>
  
-<b>Homework  #7</b> 9 problems.<br>
+<b>Homework  #6</b> 9 problems.<br>
 Section 11.5: #1, 4, 5, 6.<br>
 Section 11.7: #1, 4, 5, 7, 9.<br><br>
 
-<b>Homework  #8</b> 28 problems.<br>
+<b>Homework  #7</b> 28 problems.<br>
 Section 12.1: #1, 2, 3, 6[(1),(3),(5)].<br>
 Section 12.3: #1, 2, 3, 7, 8.<br>
 Section 12.4: #2, 4, 5, 6.<br>
 Section 12.5: #2, 3, 4, 5.<br>
 Section 12.6: #1, 2, 5, 7.<br>
 Section 12.7: #2, 5, 6, 7, 8, 9, 10.<br><br> 
+ 
+ <!--
+
+
 
   -->
 
@@ -102,9 +107,13 @@ Section 12.7: #2, 5, 6, 7, 8, 9, 10.<br><br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
   The average was 76.14. The maximum score achieved by a student was 100.<br><br>
- 
- 
-2nd midterm Exam: TBA<br><br>
+
+2nd midterm Exam: <FONT COLOR="#C40062">01 November (Wednesday),</FONT> In-class.<br>
+- Coverage: Chapter 10.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+<br>
+
 3rd midterm Exam: TBA<br><br>
    
 Final Exam: <FONT COLOR="#C40062">15 December (Friday),</FONT> 16:00--16:50 at E1-2 Room 306.<br>
