--- a/teaching/f2023_dg2.html
+++ b/teaching/f2023_dg2.html
@@ -35,6 +35,7 @@
 2022-09-01: The courseoutline has been updated. See above.<br>
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2023-10-20: Please see minor changes on <FONT color="#FF00FF"><b>midterm exam</b></FONT> plan below.<br>     
 2023-10-12: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> Details have been posted below.<br>     
 2023-09-27: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br> 
 2023-09-27: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
@@ -86,8 +87,8 @@ Problems from the National Exam: <a href="f2022_dg2/handout2.pdf" title="Selecte
 <h2><p>Exam Schedules</p></h2>
 
 Midterm Exam: <FONT COLOR="#C40062">25 October (Wednesday),</FONT> In-class.<br>
-- Coverage: Chapter 9 (up to what we cover by Ocyober 24th).<br>
-- Total 8 questions. There will be 1 set of T/F questions. Some problems will be identical or closely related to homework problems.<br>
+- Coverage: Chapter 9 (up to p.186 and corresponding problems; i.e., up to what we cover by October 18th).<br>
+- Total 7 questions. There will be 1 set of T/F questions. Some problems will be identical or closely related to homework problems.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
   <br>
 
