--- a/teaching/f2023_dg2.html
+++ b/teaching/f2023_dg2.html
@@ -92,7 +92,7 @@ Midterm Exam: <FONT COLOR="#C40062">25 October (Wednesday),</FONT> In-class.<br>
 - Coverage: Chapter 9 (up to p.186 and corresponding problems; i.e., up to what we cover by October 18th).<br>
 - Total 7 questions. There will be 1 set of T/F questions. Some problems will be identical or closely related to homework problems.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-  <br>
+- The average was 74 and the maximum score achieved by a student was 98.<br><br>
 
 
   
