--- a/teaching/f2023_dg2.html
+++ b/teaching/f2023_dg2.html
@@ -35,6 +35,8 @@
 2022-09-01: The courseoutline has been updated. See above.<br>
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2023-10-29: The midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Sunday, November 5th 07:59. Please read the email announcement for more details.<br>     
+2023-09-27: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>      
 2023-10-24: During the practice teaching period, classes (October 31st, November 1st, 7th, 8th, 14th, 15th) will go online. Please see the email announcement for more details.<br>        
 2023-10-24: The December 20th 13:00 class will go online. Please see the email announcement for more details.<br>      
 2023-10-20: Please see minor changes on <FONT color="#FF00FF"><b>midterm exam</b></FONT> plan below.<br>     
