--- a/teaching/f2023_dg2.html
+++ b/teaching/f2023_dg2.html
@@ -35,8 +35,10 @@
 2022-09-01: The courseoutline has been updated. See above.<br>
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
-2023-10-29: The midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Sunday, November 5th 07:59. Please read the email announcement for more details.<br>     
-2023-09-27: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>      
+2023-10-30: The Google Form for you to submit your PBL project is ready. Please submit it by November 30th.<br>    
+2023-10-30: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br> 
+2023-10-30: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
+2023-10-29: The midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Sunday, November 5th 07:59. Please read the email announcement for more details.<br>    
 2023-10-24: During the practice teaching period, classes (October 31st, November 1st, 7th, 8th, 14th, 15th) will go online. Please see the email announcement for more details.<br>        
 2023-10-24: The December 20th 13:00 class will go online. Please see the email announcement for more details.<br>      
 2023-10-20: Please see minor changes on <FONT color="#FF00FF"><b>midterm exam</b></FONT> plan below.<br>     
@@ -63,15 +65,18 @@ Problems from the National Exam: <a href="f2023_dg2/handout1.pdf" title="Selecte
 Problems from Chapter 9 Part 3: #10, 21, 22, 44, 48.<br>
 Problems from Chapter 9 Part 4: #26, 27, 45, 46, 47, 52, 55.<br><br>  
 
+<b>Homework  #4</b> 13 problems.<br>
+Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br>
+Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
+
+<b>Homework  #5</b> 9 problems.<br>
+Problems from the National Exam: <a href="f2023_dg2/handout2.pdf" title="Selected problems from the national exam">Handout 2</a>.<br><br>    
 
   <!--
     Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
 
 
   
-<b>Homework  #4</b> 13 problems.<br>
-Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br>
-Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
 
 <b>Homework  #5</b> 8 problems.<br>
 Problems from the National Exam: <a href="f2022_dg2/handout2.pdf" title="Selected problems from the national exam">Handout 2</a>.<br><br>  
@@ -127,7 +132,7 @@ Finam Exam: <FONT COLOR="#C40062">15 December (Thursday),</FONT> 13:00--14:50 at
 For an extra credit, you should record a 20-minute long video lecture about one of the following:<br>
 (1) A sample lecture on any topic listed on the syllabus of this course.<br>
 (2) A sample lecture on a concept from secondary school geometry curricular.<br><br>
-You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/fXwkvc8TpLJyJhVp6" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
+You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/ZBzUXc43J9sPujZh7" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
   
 Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into “private” or even delete the video after your letter grade for this course is assigned.<br><br>
 
