--- a/teaching/s2023_calc1.html
+++ b/teaching/s2023_calc1.html
@@ -51,7 +51,7 @@
 2023-05-10: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>   
 2023-05-10: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>   
 2023-05-10: <FONT color="#FF00FF"><b>The 3rd midterm exam announcement</b></FONT> The detail has been posted below.<br>
-2023-05-09: Review report of the 1st course evaluation survey is available on eCampus.<br>   
+2023-05-09: Review report of the 1st course evaluation survey is available on eCampus or <a href="s2023_calc1/2023-05-09_courseevalresponse.pdf" title="Open course evaluation reponse">here</a>.<br>   
 2023-05-02: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>   
 2023-05-02: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>   
 2023-04-25: <FONT color="#FF00FF"><b>The 2nd midterm exam announcement</b></FONT> The detail has been posted below.<br> 
