--- a/teaching/f2023_calc2.html
+++ b/teaching/f2023_calc2.html
@@ -37,7 +37,7 @@
 2022-09-02: <b>Announcements</b> The classes will go online on Tuesday September 6th. Please read email announcements.<br>   
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
-2023-11-13: Review report of the 1st course evaluation survey is available on eCampus.<br>   
+2023-11-13: Review report of the 1st course evaluation survey is available on eCampus. See also a compilation of complaint cases available <a href="f2023_calc2/complaintcases.pdf" title="Open Complaint cases">here</a>.
  -->
 2023-11-02: The 2nd midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Thursday, November 9th 12:59. Please read the email announcement for more details.<br>     
 2023-10-20: <FONT color="#FF00FF"><b>2nd midterm exam announcement</b></FONT> Details have been posted below.<br>     
