--- a/teaching/f2023_calc2.html
+++ b/teaching/f2023_calc2.html
@@ -38,6 +38,7 @@
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
  -->
+2023-11-22: <FONT color="#FF00FF"><b>3rd midterm exam announcement</b></FONT> Details have been posted below.<br>      
 2023-11-13: Review report of the 1st course evaluation survey is available on eCampus.<br>
 2023-11-02: The 2nd midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Thursday, November 9th 12:59. Please read the email announcement for more details.<br>     
 2023-10-20: <FONT color="#FF00FF"><b>2nd midterm exam announcement</b></FONT> Details have been posted below.<br>     
@@ -116,13 +117,18 @@ Section 12.7: #2, 5, 6, 7, 8, 9, 10.<br><br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 The average was 63.89. The maximum score achieved by a student was 100.<br><br>
 
-3rd midterm Exam: TBA<br><br>
+3rd midterm Exam: <FONT COLOR="#C40062">29 November (Wednesday),</FONT> In-class.<br>
+- Coverage: Chapter 11.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+<br>
+
    
 Final Exam: <FONT COLOR="#C40062">15 December (Friday),</FONT> 16:00--16:50 at E1-2 Room 306.<br>
 Detailed announcement will be followed in due time.<br><br>
   
 <!--
-  
+The average was 63.89. The maximum score achieved by a student was 100.<br>  
   
  
  2nd midterm Exam: <FONT COLOR="#C40062">08 November (Tuesday),</FONT> In-class.<br>
