--- a/teaching/f2023_calc2.html
+++ b/teaching/f2023_calc2.html
@@ -38,6 +38,8 @@
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
  -->
+2023-11-29: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>      
+2023-11-24: Make-up class schedule for December 12th classes has been posted below.<br>     
 2023-11-22: <FONT color="#FF00FF"><b>3rd midterm exam announcement</b></FONT> Details have been posted below.<br>      
 2023-11-13: Review report of the 1st course evaluation survey is available on eCampus.<br>
 2023-11-02: The 2nd midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Thursday, November 9th 12:59. Please read the email announcement for more details.<br>     
@@ -125,7 +127,11 @@ The average was 63.89. The maximum score achieved by a student was 100.<br><br>
 
    
 Final Exam: <FONT COLOR="#C40062">15 December (Friday),</FONT> 16:00--16:50 at E1-2 Room 306.<br>
-Detailed announcement will be followed in due time.<br><br>
+- Coverage: Chapter 12.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+- Dispute meetings are planned to be scheduled on December 20th, 2023 during 11:00--12:00.<br>
+<br>
   
 <!--
 The average was 63.89. The maximum score achieved by a student was 100.<br>  
@@ -156,7 +162,9 @@ The average was 63.89. The maximum score achieved by a student was 100.<br>
 <h2><p>Make-up class schedules</p></h2>
 Tuesday, October 3rd 10:00 session will meet on <b>Wednesday, October 4th 17:00</b><br>
 Tuesday, October 3rd 11:00 session will meet on <b>Wednesday, October 11th 17:00</b><br>
-Tuesday, October 24th 10:00 session will meet on <b>Wednesday, October 18th 17:00</b><br> 
+Tuesday, October 24th 10:00 session will meet on <b>Wednesday, October 18th 17:00</b><br>
+Tuesday, December 12th 10:00 session will meet on <b>Wednesday, November 29th 17:00</b><br>
+Tuesday, December 12th 11:00 session will meet on <b>Wednesday, December 6th 17:00</b><br>
  
 <h2><p>Links</p></h2>
 <a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
