--- a/teaching/f2023_calc2.html
+++ b/teaching/f2023_calc2.html
@@ -38,7 +38,9 @@
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
  -->
-2023-11-29: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>      
+2023-11-30: If you want to see your graded paper of the upcoming final exam or to just receive your score by email, please email me no later than Friday, December 15th 23:59. Please read the email announcement for more details.<br>     
+2023-11-30: The 3rd midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Thursday, December 7th 13:29. Please read the email announcement for more details.<br>     
+ 2023-11-29: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>      
 2023-11-24: Make-up class schedule for December 12th classes has been posted below.<br>     
 2023-11-22: <FONT color="#FF00FF"><b>3rd midterm exam announcement</b></FONT> Details have been posted below.<br>      
 2023-11-13: Review report of the 1st course evaluation survey is available on eCampus.<br>
