--- a/teaching/f2023_calc2.html
+++ b/teaching/f2023_calc2.html
@@ -125,7 +125,7 @@ The average was 63.89. The maximum score achieved by a student was 100.<br><br>
 - Coverage: Chapter 11.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-<br>
+The average was 49.55. The maximum score achieved by a student was 97.<br><br>
 
    
 Final Exam: <FONT COLOR="#C40062">15 December (Friday),</FONT> 16:00--16:50 at E1-2 Room 306.<br>
