--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
  -->
 
 
+  <h2><p>Upcoming talks</p></h2>
+<dl>
+  <dd>11, 18, and 25 December 2023: <a href="seminars/2023-12_imsrs_minicourse">IUT Mathematics and Statistics Research Seminar</a>, Isfahan University of Technology, Isfahan, Iran. <a href="seminars/2023-12_imsrs_minicourse">Poster</a></dd>
+</dl>
+
 <h2><p>Selected talks and slides</p></h2>
 <dl>
 <!-- <dd>01 February 2019: <a href="http://www.kias.re.kr/sub05/sub05_02_01_01.jsp?seqno=PGN1720190117-0003&nowBlock=0&page=1&subject=&mjrcd=1&mjrcd2=1&sdate=20190201&edate=20190201&keyField=&keyWord=&list_url=/sub05/sub05_02_02.jsp&slides=">DG Seminar</a>: "What is an infinity category?" -- Biweekely lecture series. Korea Institute for Advanced Study (KIAS), Seoul, Korea.</dd>-->
