--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 
   <h2><p>Upcoming talks</p></h2>
 <dl>
-  <dd>11, 18, and 25 December 2023: <a href="seminars/2023-12_imsrs_minicourse">IUT Mathematics and Statistics Research Seminar</a>, Isfahan University of Technology, Isfahan, Iran. <a href="seminars/2023-12_imsrs_minicourse">Poster</a></dd>
+  <dd>11, 18, and 25 December 2023: <a href="seminars/2023-12_imsrs_minicourse.pdf">IUT Mathematics and Statistics Research Seminar</a>, Isfahan University of Technology, Isfahan, Iran. <a href="seminars/2023-12_imsrs_minicourse.pdf">Poster</a></dd>
 </dl>
 
 <h2><p>Selected talks and slides</p></h2>
