--- a/teaching/f2023_dg2.html
+++ b/teaching/f2023_dg2.html
@@ -35,6 +35,8 @@
 2022-09-01: The courseoutline has been updated. See above.<br>
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2023-12-06: If you want to see your graded paper of the upcoming final exam or to just receive your score by email, please email me no later than Friday, December 15th 23:59. Please read the email announcement for more details.<br>
+2023-12-06: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>     
 2023-10-30: The Google Form for you to submit your PBL project is ready. Please submit it by November 30th.<br>    
 2023-10-30: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br> 
 2023-10-30: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
@@ -72,17 +74,16 @@ Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
 <b>Homework  #5</b> 9 problems.<br>
 Problems from the National Exam: <a href="f2023_dg2/handout2.pdf" title="Selected problems from the national exam">Handout 2</a>.<br><br>    
 
+<b>Homework  #6</b> 2 problems.<br>
+Problems from the National Exam: <a href="f2023_dg2/handout3.pdf" title="Selected problems from the national exam">Handout 3</a>.<br><br>    
+
+  
   <!--
     Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
 
 
   
 
-<b>Homework  #5</b> 8 problems.<br>
-Problems from the National Exam: <a href="f2022_dg2/handout2.pdf" title="Selected problems from the national exam">Handout 2</a>.<br><br>  
-  
-<b>Homework  #6</b> 2 problems.<br>
-<a href="f2022_dg2/handout3.pdf" title="Selected problems from the national exam">Handout 3</a>.<br><br>    
   -->
   
 <!--
@@ -105,7 +106,11 @@ Midterm Exam: <FONT COLOR="#C40062">25 October (Wednesday),</FONT> In-class.<br>
   
   
 Final Exam: <FONT COLOR="#C40062">15 December (Friday),</FONT> 10:00--11:40 at E1-1 Room 136.<br>
-Detailed announcement will be followed in due time.<br><br>
+- Coverage: Everything we covered during this semester including all homework assignments.<br>
+- Total 6 questions. There will be 1 set of T/F questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+- Dispute meetings are planned to be scheduled on December 20th, 2023 during 13:00--14:00.<br>
+<br>
   
 <!--  
 - The average was 62 and the maximum score achieved by a student was 97.<br><br>
