--- a/teaching/s2024_srp1.html
+++ b/teaching/s2024_srp1.html
@@ -1,2 +1,45 @@
+<html>
+<head>
+<title> Special Research Project I</title>
+</head>
+<font face="Times New Roman">
+<body>
+<h1><p align="center">Special Research Project I</p></h1>
+<h3><p align="center">Course 9114209 Section 02, Spring 2024</p></h3>
+<h3><p align="center">Thursdays 18:00 - 18:50 at Room: E1-1 #116</p></h3>
+<h3><p align="center">Chungbuk National University</p></h3><br>
 
-a
+
+<!-- FONT SIZE SPECIFICATION-->
+<font size="4" >
+<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_gcbnu.jpg" width="291" height="79"><br>
+<b>Office Hours:</b> By appointment.<br>
+<b>Syllabus:</b>  <a href="s2024_srp1/courseoutline.pdf" title="Open Course Outline">PDF</a> <a href="s2024_srp1/form_discussionlog.hwp" title="Open Discussion log form">Attached form</a><br>
+
+
+<h2><p>Announcements</p></h2>
+2021-08-04: Letter grades have been submitted. Enjoy your summer.<br>  -->
+  <!--
+
+2024-03-01: Welcome! Our first day of class is July 14th.<br>
+
+
+
+
+
+<h2><p>Links</p></h2>
+<a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
+<a href="http://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
+<br><br>
+
+
+
+</font>
+<!-- FONT SIZE SPECIFICATION-->
+
+
+</font>
+</body>
+
+
+</html>
