--- a/teaching/f2023_calc2.html
+++ b/teaching/f2023_calc2.html
@@ -38,6 +38,7 @@
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
  -->
+2023-12-20: Letter grades have been submitted. Happy Holidays!<br>  
 2023-11-30: If you want to see your graded paper of the upcoming final exam or to just receive your score by email, please email me no later than Friday, December 15th 23:59. Please read the email announcement for more details.<br>     
 2023-11-30: The 3rd midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Thursday, December 7th 13:29. Please read the email announcement for more details.<br>     
 2023-11-29: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>      
@@ -133,7 +134,7 @@ Final Exam: <FONT COLOR="#C40062">15 December (Friday),</FONT> 16:00--16:50 at E
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 - Dispute meetings are planned to be scheduled on December 20th, 2023 during 11:00--12:00.<br>
-<br>
+The average was 41.61. The maximum score achieved by a student was 100.<br><br>
   
 <!--
 The average was 63.89. The maximum score achieved by a student was 100.<br>  
