--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 
 <h2><p>Teaching</p></h2>
 <dl>
-
-<dd><a href="teaching/f2023_dg2.html">Differential Geometry II</a></dd>
-<dd><a href="teaching/f2023_calc2.html">Calculus II</a></dd> 
+<dd><a href="teaching/s2024_srp1.html">Special Research Project I</a> (Graduate Course)</dd>    
+<dd><a href="teaching/s2024_top1.html">General Topology I</a></dd>  
+<dd><a href="teaching/s2024_dg1.html">Differential Geometry I</a></dd>
+<dd><a href="teaching/s2024_geom1.html">Geometry for teachers</a></dd>
+<dd><a href="teaching/s2024_calc1.html">Calculus I</a></dd>  
 </dl>
 <ul>
   <li><a href="teaching/pastcourses.html">Past courses</a></li>
@@ -100,6 +102,9 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
   <li><a href="teaching/pastcourses.html">Past courses</a></li>
 </ul>
 <dl>
+
+<dd><a href="teaching/f2023_dg2.html">Differential Geometry II</a></dd>
+<dd><a href="teaching/f2023_calc2.html">Calculus II</a></dd>   
 <dd><a href="teaching/f2020_ge.html">Geometry and Education</a></dd>
 <dd><a href="teaching/f2020_dg2.html">Differential Geometry II</a></dd>
 <dd><a href="teaching/f2020_geom2.html">Geometry for Teachers II</a></dd>
