--- a/teaching/pastcourses.html
+++ b/teaching/pastcourses.html
@@ -11,7 +11,8 @@
 <h2><p>Courses taught in previous semesters</p></h2>
 <dl>
   <dt><b>Chungbuk National University</b></dt>
-        <dd>Spring 2023: <a href="../teaching/s2023_calc1.html">Calculus I</a>, <a href="../teaching/s2023_introgeom.html">Introduction to Geometry</a>, <a href="../teaching/s2023_geom1.html">Geometry for teachers</a>, <a href="../teaching/s2023_dg1.html">Differential Geometry I</a></dd>      
+  <dd>Fall 2023: <a href="../teaching/f2023_dg2.html">Differential Geometry II</a>, <a href="../teaching/f2023_calc2.html">Calculus II</a></dd>      
+  <dd>Spring 2023: <a href="../teaching/s2023_calc1.html">Calculus I</a>, <a href="../teaching/s2023_introgeom.html">Introduction to Geometry</a>, <a href="../teaching/s2023_geom1.html">Geometry for teachers</a>, <a href="../teaching/s2023_dg1.html">Differential Geometry I</a></dd>      
         <dd>Fall 2022: <a href="../teaching/f2022_athmme.html">Advanced Topics in History of Mathematics and Mathematics Education</a> (Graduate Course), <a href="../teaching/f2022_dg2.html">Differential Geometry II</a>, <a href="../teaching/f2022_calc2.html">Calculus II</a></dd>  
         <dd>Spring 2021: <a href="../teaching/s2022_tig1.html">Topics in Geometry I</a> (Graduate Course), <a href="../teaching/s2022_dg1.html">Differential Geometry I</a>,  <a href="../teaching/s2022_geom1.html">Geometry for Teachers I</a>, <a href="../teaching/s2022_calc1.html">Calculus I</a></dd>
         <dd>Fall 2021: <a href="../teaching/f2021_fom2.html">Foundation of Mathematics II</a> (Graduate Course), <a href="../teaching/f2021_dg2.html">Differential Geometry II</a>, <a href="../teaching/f2021_cv2.html">Complex Analysis II</a></dd>
