--- a/teaching/s2024_srp1.html
+++ b/teaching/s2024_srp1.html
@@ -21,7 +21,7 @@
 2021-08-04: Letter grades have been submitted. Enjoy your summer.<br>  -->
   <!--
 
-2024-03-01: Welcome! Our first day of class is July 14th.<br>
+2024-03-01: Welcome!<br>
 
 
 
