--- a/teaching/s2024_srp1.html
+++ b/teaching/s2024_srp1.html
@@ -18,8 +18,8 @@
 
 
 <h2><p>Announcements</p></h2>
-2021-08-04: Letter grades have been submitted. Enjoy your summer.<br>  -->
-  <!--
+<!-- 2021-08-04: Letter grades have been submitted. Enjoy your summer.<br>  -->
+  
 
 2024-03-01: Welcome!<br>
 
