--- a/index.html
+++ b/index.html
@@ -46,12 +46,16 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
   <li>A smooth variant of Hopkins-Singer differential K-theory, <em><a href="http://nyjm.albany.edu/j/2017/23-30.html">New York J. Math.</a></em>,  <b>23</b> (2017) 655--670. <a href="http://arxiv.org/abs/1607.08686">ArXiv</a></li>
  </ul>
 
-<h2><p>Book project</p></h2>
+<h2><p>Book projects</p></h2>
 <ul>
+  <!-
+  <li><b>Calculus</b> (in Korean), <b>Prealculus</b> (in Korean), <b>College Mathematics</b> (in Korean), with Daewoong Cheong, Sukjung Hwang, Un Cig Ji, Sangdon Jin, Sejong Kim, Sun Kwang Kim, Doowon Koh, Ohsang Kwon, Eunjeong Lee, Jaemin Shin, Changhun Yang, Mee Sue Yoo, and Youngho Yoon (2024) <a href="https://www.kyungmoon.com">Kyungmoon Publishing Co.</a>, ISBN-13: 9791160736908 (Calculus) available to purchase at <a href="">Kyobo</a> and <a href="">Aladin</a>, ISBN-13: 0000000000000 (Preculus) available to purchase at <a href="">Kyobo</a> and <a href="">Aladin</a>, ISBN-13: 9791160736922 (College Mathematics) available to purchase at <a href="">Kyobo</a> and <a href="">Aladin</a>.</li>
+  ->
   <li><em>How can we be good at mathematics?</em> in <b>Knowledge and education in the era of new media</b> (in Korean) with Jin Choi, Seung-Hyun Choi, Hye-Jee Gil, Yeungyu Ha, Jiyoung Hwang, Gail Jeon, Jieun Lim, Sein Shin, Kyung Chan Son, Kyungwon Son, Jooho Song, and Hyun Wi Yoon (2022) <a href="https://www.pybook.co.kr/mall/book/pysstory?goodsno=7459">Pakyoungsa</a>, ISBN-13: 9791165192730 available to purchase at <a href="https://product.kyobobook.co.kr/detail/S000200023928">Kyobo</a> and <a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=303014149">Aladin</a>. </li>
   </ul>
 
-    
+  
+ <!--     
 <h2><p>In preparation</p></h2>
 <ul>
   <li>An approach on Euler-Arnold equations via algebraic topology: Sullivan's methodology, with Jae Min Lee.</li>
@@ -60,6 +64,8 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
   <li>Geometric models for twisted differential K-theory II, near completion. First draft available.</li>
 </ul>
 
+ -->
+  
 <!--
 <h2><p>Work in progress</p></h2>
 <ul>
