--- a/teaching/s2024_srp1.html
+++ b/teaching/s2024_srp1.html
@@ -12,7 +12,7 @@
 
 <!-- FONT SIZE SPECIFICATION-->
 <font size="4" >
-<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_gcbnu.jpg" width="291" height="79"><br>
+<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_cbnu.jpg" width="302" height="63"><br>
 <b>Office Hours:</b> By appointment.<br>
 <b>Syllabus:</b>  <a href="s2024_srp1/courseoutline.pdf" title="Open Course Outline">PDF</a> <a href="s2024_srp1/form_discussionlog.hwp" title="Open Discussion log form">Attached form</a><br>
 
