--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 <h2><p>About me</p></h2>
 I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a>, <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
 
+  <!--
+I am currently serving as an Associate Dean of the <a href=https://edu.chungbuk.ac.kr/www/index.do>the College of Education</a> and the <a href=https://edu.chungbuk.ac.kr/gsedu/index.do>Graduate School of Education</a> as well as a representative of the <a href=https://faculty.chungbuk.ac.kr/>Faculty Assembly</a>.
+-->
+ 
+  
+  an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a>, <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
+  
 Previously, I was a Research Fellow (Postdoc) at the <a href="http://www.kias.re.kr/">School of Mathematics, Korea Institute for Advanced Study</a>. Before that, I worked in Bonn, Germany as a Postdoctoral Fellow at <a href="http://www.mpim-bonn.mpg.de/">Max-Planck-Institut f&uuml;r Mathematik</a> and as a guest of <a href="http://www.him.uni-bonn.de/">Hausdorff Research Institute for Mathematics</a>. I also taught mathematics and advised students in New York City for seven semesters. I received my PhD from <a href="http://math.gc.cuny.edu">CUNY Graduate Center</a>. My thesis is <a href="http://academicworks.cuny.edu/gc_etds/1533/">here</a>. Before coming to the US, I studied Mathematics at <a href="http://www.yonsei.ac.kr/">Yonsei University</a> in Seoul, South Korea.<br><br>
 
 Here is my <a href="CV_Park.pdf">CV</a>. <!-- My research is supported by the <a href="https://www.nrf.re.kr/eng/index">National Research Foundation</a> funded by the <a href="https://www.msit.go.kr/english/main/main.do">Ministry of Science and ICT</a>, Republic of Korea.--><br><br>
