--- a/teaching/s2024_dg1.html
+++ b/teaching/s2024_dg1.html
@@ -114,7 +114,7 @@ The average was 62.57. The maximum score achieved by a student was 89.<br>
 For an extra credit, you should record a 20-minute long video lecture about one of the following:<br>
 (1) A sample lecture on any topic listed on the syllabus of this course.<br>
 (2) A sample lecture on a concept from secondary school geometry curricular.<br><br>
-You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/xMxqGJ5Bj81i5jR66" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
+You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/Ueg2jvvnkcSvmb797" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
   
 Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into “private” or even delete the video after your letter grade for this course is assigned.<br><br>
 
