--- a/teaching/s2024_geom1.html
+++ b/teaching/s2024_geom1.html
@@ -1,1 +1,171 @@
-a
+<html>
+<head>
+<title> Geometry for teachers </title>
+</head>
+<font face="Times New Roman">
+<body>
+<h1><p align="center">Geometry for teachers</p></h1>
+<h3><p align="center">Course 7412647 Section 01, Spring 2024</p></h3>
+<h3><p align="center">Wednesdays 14:00 - 14:50, Thursdays 13:00 - 14:50, Room: E1-1 #140</p></h3>
+<h3><p align="center">Chungbuk National University</p></h3>
+<br>
+
+
+<!-- FONT SIZE SPECIFICATION-->
+<font size="4" >
+<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
+<b>Office Hours:</b> Wednesdays 15:00--15:50 at E1-1 Room 110.<br>
+<b>Syllabus:</b>  <a href="s2024_geom1/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
+
+
+<h2><p>Announcements</p></h2>
+<!-- 
+2023-06-15: Letter grades have been submitted. Enjoy your summer break.<br> 
+2023-05-28: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
+2023-05-28: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>  
+2023-05-25: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br> 
+2023-05-24: Click <a href="https://tinyurl.com/2023-1dg1geom1calc1" title="Dispute related">this link</a> to book a meeting to set up an appointment for looking at your graded 2nd midterm exam papers.<br>  
+2023-05-20: <b>Announcements</b> The last day to dispute your grade details and relevant information are <a href="../teaching/s2023_dg1/2023-05-28_dispute.pdf" title="Dispute related">here</a>.<br>
+2023-05-20:<FONT COLOR="red">Homework #9</FONT> has been posted below.<br>  
+2023-05-20:<FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
+2023-05-13: <FONT color="#FF00FF"><b>The 2nd midterm exam announcement</b></FONT> The detail has been posted below.<br>   
+2023-05-10: A good online source to learn about the geometric meaning of eccentricity is <a href="https://www.mathsisfun.com/geometry/eccentricity.html" title="Eccentricity">here</a>.<br>
+2023-05-10:<FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
+2023-05-10:<FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
+2023-05-02: Please see the change of class schedule we have discussed and agreed today in class: <a href="../teaching/s2023_geom1/2023-05-02_changeplan.pdf" title="Change of class schedule">PDF</a>.<br>
+2023-04-15: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
+2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br>   
+2023-03-26: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
+2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
+2023-03-20: <b>Announcements</b> The class will go online on March 28th 11:00--11:50. We still meet on the 28th 10:00 in classroom. Please read email announcements.<br> 
+2023-03-20: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
+2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
+2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
+-->
+2024-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>  
+2024-03-01: <b>Announcements</b> <a href="../teaching/s2024_dg1/2024-03-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
+2024-03-01: Welcome!<br>  
+
+
+
+<h2><p>Homework</p></h2>
+TBA<br>
+  <!--
+<b>Homework  #1</b> 10 problems.<br>
+Exercises in Section 1.3. p.4 #1<br>
+Exercises in Section 1.4. p.6 #3, 4, 5, 6, 7<br>
+Exercises in Section 1.5. p.8 #1, 4, 5<br>
+Exercises in Section 1.6. p.11 #1<br>
+<br>
+
+<b>Homework  #2</b> 10 problems.<br>
+Exercises in Section 2.1. p.13 #1<br>
+Exercises in Section 2.2. p.15 #1, 2, 3, 4<br>
+Exercises in Section 2.3. p.18 #1<br>
+Exercises in Section 2.4. p.20 #1, 2, 3, 5<br>
+<br> 
+
+ <b>Homework  #3</b> 9 problems.<br>
+Exercises in Section 3.2. p.24 #2<br>
+Exercises in Section 3.3. p.25 #2<br>
+Exercises in Section 3.4. p.27 #1<br>
+Exercises in Section 3.5. p.30 #1, 2, 6, 7, 8, 9<br>
+<br> 
+
+ <b>Homework  #4</b> 10 problems.<br>
+Exercises in Section 4.2. p.37 #2, 3, 4<br>
+Exercises in Section 4.3. p.39 #1, 2, 3<br>
+Exercises in Section 4.4. p.41 #1, 3<br>
+Exercises in Section 4.5. p.43 #1, 2<br>
+<br> 
+
+<b>Homework  #5</b> 12 problems.<br>
+Exercises in Section 5.2. p.48 #1, 2, 4, 5, 6<br>
+Exercises in Section 5.3. p.51 #1<br>
+Exercises in Section 6.2. p.58 #2, 3, 4, 6<br>
+Exercises in Section 6.3. p.61 #1<br> 
+Exercises in Section 6.4. p.63 #1<br><br>
+
+<b>Homework  #6</b> 8 problems.<br>
+ Exercises in Section 7.1. p.68 #1, 2<br>
+ Exercises in Section 7.2. p.71 #1, 2<br>
+ Exercises in Section 7.3. p.73 #2, 3, 5<br>
+ Exercises in Section 7.4. p.75 #1<br><br>
+ 
+<b>Homework  #7</b> 7 problems.<br>
+ Exercises in Section 8.1. p.78 #1, 2, 3<br>
+ Exercises in Section 8.3. p.81 #1[(i),(iii)]<br>
+ Exercises in Section 8.4. p.83 #1<br>
+ Exercises in Section 8.5. p.86 #1[(i)], 2[(i)]<br>
+ 
+ 
+ <b>Homework  #8</b> 9 problems.<br>
+ Exercises in Section 9.1. p.89 #1, 2<br>
+ Exercises in Section 9.2. p.93 #1, 2, 3, 4<br>
+ Exercises in Section 9.3. p.96 #1, 2, 4<br><br>
+ 
+ <b>Homework  #9</b> 10 problems.<br>
+ Exercises in Section 10.2. p.101 #1<br>
+ Exercises in Section 10.3. p.104 #1, 2<br>
+ Exercises in Section 11.1. p.107 #1, 2<br>
+ Exercises in Section 11.2. p.110 #1, 4<br>
+ Exercises in Section 11.3. p.113 #1<br>
+ Exercises in Section 12.1. p.118 #1[(i),(ii),(iii)]<br>
+ Exercises in Section 12.2. p.121 #2<br><br>
+ 
+--> 
+
+
+<h2><p>Exam Schedules</p></h2>
+TBA<br>
+
+  <!--
+  The 1st midterm exam: <FONT COLOR="#C40062">12 April (Wednesday) 17:00--17:50</FONT> in-class. <br>
+- Coverage: Chapters 1 to 4.<br>
+- Total 4 questions.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+The average was 65.10. The maximum score achieved by a student was 100.<br>
+ <br>
+ 
+ The 2nd midterm exam: <FONT COLOR="#C40062">24 May (Wednesday) 17:00--17:50</FONT> in-class. <br>
+- Coverage: Chapters 5 to 8.<br>
+- Total 4 questions.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+The average was 71.17. The maximum score achieved by a student was 100.<br><br>
+
+  
+Final Exam: <FONT COLOR="#C40062">14 June (Wednesday) 17:00--18:40</FONT> in-class. <br>
+- Coverage: Everything we covered in this course by June 9th including all homework problems.<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+<br> 
+The average was 43. The maximum score achieved by a student was 90.<br><br> 
+ 
+
+    
+-->
+
+ 
+
+<h2><p>Assessment of Project-Based Learning (PBL)</p></h2>
+For an extra credit, you should record a 20-minute long video lecture about one of the following:<br>
+(1) A sample lecture on any topic listed on the syllabus of this course.<br>
+(2) A sample lecture on a concept from secondary school geometry curricular.<br><br>
+You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/Ueg2jvvnkcSvmb797" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br> 
+  
+Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into “private” or even delete the video after your letter grade for this course is assigned.<br><br>
+
+ 
+<h2><p>Links</p></h2>
+<a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
+<a href="https://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
+<br><br>
+
+</font>
+<!-- FONT SIZE SPECIFICATION-->
+
+</font>
+</body>
+
+
+</html>
