--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 <h2><p>About me</p></h2>
 I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a> and an Associate Dean of the <a href=https://edu.chungbuk.ac.kr/www/index.do>College of Education</a> at the <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
 
-  <!--
-
--->
- 
+  
   
 Previously, I was a Research Fellow (Postdoc) at the <a href="http://www.kias.re.kr/">School of Mathematics, Korea Institute for Advanced Study</a>. Before that, I worked in Bonn, Germany as a Postdoctoral Fellow at <a href="http://www.mpim-bonn.mpg.de/">Max-Planck-Institut f&uuml;r Mathematik</a> and as a guest of <a href="http://www.him.uni-bonn.de/">Hausdorff Research Institute for Mathematics</a>. I also taught mathematics and advised students in New York City for seven semesters. I received my PhD from <a href="http://math.gc.cuny.edu">CUNY Graduate Center</a>. My thesis is <a href="http://academicworks.cuny.edu/gc_etds/1533/">here</a>. Before coming to the US, I studied Mathematics at <a href="http://www.yonsei.ac.kr/">Yonsei University</a> in Seoul, South Korea.<br><br>
 
@@ -55,11 +52,10 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 
 <h2><p>Book projects</p></h2>
 <ul>
-  <!--
-  <li><b>Calculus</b> (in Korean), <b>Prealculus</b> (in Korean), <b>College Mathematics</b> (in Korean), with Daewoong Cheong, Sukjung Hwang, Un Cig Ji, Sangdon Jin, Sejong Kim, Sun Kwang Kim, Doowon Koh, Ohsang Kwon, Eunjeong Lee, Jaemin Shin, Changhun Yang, Mee Sue Yoo, and Youngho Yoon (2024) <a href="https://www.kyungmoon.com">Kyungmoon Publishing Co.</a>, ISBN-13: 9791160736908 (Calculus) available to purchase at <a href="">Kyobo</a> and <a href="">Aladin</a>, ISBN-13: 0000000000000 (Preculus) available to purchase at <a href="">Kyobo</a> and <a href="">Aladin</a>, ISBN-13: 9791160736922 (College Mathematics) available to purchase at <a href="">Kyobo</a> and <a href="">Aladin</a>.</li>
-  -->
+  <li><b>Calculus</b> (in Korean), <b>Prealculus</b> (in Korean), <b>College Mathematics</b> (in Korean), with Daewoong Cheong, Sukjung Hwang, Un Cig Ji, Sangdon Jin, Sejong Kim, Sun Kwang Kim, Doowon Koh, Ohsang Kwon, Eunjeong Lee, Jaemin Shin, Changhun Yang, Mee Sue Yoo, and Youngho Yoon (2024) <a href="https://www.kyungmoon.com">Kyungmoon Publishing Co.</a>, ISBN-13: 9791160736908 (Calculus) available to purchase at <a href="https://product.kyobobook.co.kr/detail/S000212604519">Kyobo</a> and <a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=335222835">Aladin</a>, ISBN-13: 9791160736915 (Preculus) available to purchase at <a href="https://product.kyobobook.co.kr/detail/S000212615838">Kyobo</a> and <a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=335561068">Aladin</a>, ISBN-13: 9791160736922 (College Mathematics) available to purchase at <a href="https://product.kyobobook.co.kr/detail/S000212615840">Kyobo</a> and <a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=335558940">Aladin</a>.</li>
   <li><em>How can we be good at mathematics?</em> in <b>Knowledge and education in the era of new media</b> (in Korean) with Jin Choi, Seung-Hyun Choi, Hye-Jee Gil, Yeungyu Ha, Jiyoung Hwang, Gail Jeon, Jieun Lim, Sein Shin, Kyung Chan Son, Kyungwon Son, Jooho Song, and Hyun Wi Yoon (2022) <a href="https://www.pybook.co.kr/mall/book/pysstory?goodsno=7459">Pakyoungsa</a>, ISBN-13: 9791165192730 available to purchase at <a href="https://product.kyobobook.co.kr/detail/S000200023928">Kyobo</a> and <a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=303014149">Aladin</a>. </li>
   </ul>
+
 
   
  <!--     
