--- a/teaching/s2024_geom1.html
+++ b/teaching/s2024_geom1.html
@@ -42,6 +42,8 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2024-03-17: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
+2024-03-17: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>   
 2024-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>  
 2024-03-01: <b>Announcements</b> <a href="../teaching/s2024_dg1/2024-03-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
 2024-03-01: Welcome!<br>  
@@ -49,8 +51,6 @@
 
 
 <h2><p>Homework</p></h2>
-TBA<br>
-  <!--
 <b>Homework  #1</b> 10 problems.<br>
 Exercises in Section 1.3. p.4 #1<br>
 Exercises in Section 1.4. p.6 #3, 4, 5, 6, 7<br>
@@ -64,6 +64,10 @@ Exercises in Section 2.2. p.15 #1, 2, 3, 4<br>
 Exercises in Section 2.3. p.18 #1<br>
 Exercises in Section 2.4. p.20 #1, 2, 3, 5<br>
 <br> 
+
+  
+  <!--
+
 
  <b>Homework  #3</b> 9 problems.<br>
 Exercises in Section 3.2. p.24 #2<br>
