--- a/teaching/s2024_geom1.html
+++ b/teaching/s2024_geom1.html
@@ -42,6 +42,7 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2024-03-24: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2024-03-17: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2024-03-17: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>   
 2024-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>  
@@ -65,16 +66,16 @@ Exercises in Section 2.3. p.18 #1<br>
 Exercises in Section 2.4. p.20 #1, 2, 3, 5<br>
 <br> 
 
-  
-  <!--
-
-
  <b>Homework  #3</b> 9 problems.<br>
 Exercises in Section 3.2. p.24 #2<br>
 Exercises in Section 3.3. p.25 #2<br>
 Exercises in Section 3.4. p.27 #1<br>
 Exercises in Section 3.5. p.30 #1, 2, 6, 7, 8, 9<br>
 <br> 
+  
+  <!--
+
+
 
  <b>Homework  #4</b> 10 problems.<br>
 Exercises in Section 4.2. p.37 #2, 3, 4<br>
