--- a/teaching/s2024_dg1.html
+++ b/teaching/s2024_dg1.html
@@ -36,7 +36,7 @@
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>     
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
-
+2024-03-24: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
 2024-03-17: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
 2024-03-17: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>    
 2024-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>  
@@ -51,11 +51,13 @@ Problems from Chapter 3: #1, 9, 15, 17, 18, 21, 25, 26, 31, 32, 34.<br><br>
 <b>Homework  #2</b> 8 problems.<br>
 Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
 
-  <!--
 
 
 <b>Homework  #3</b> 10 problems.<br>
 Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br>  
+  
+  <!--
+
 
 <b>Homework  #4</b> 12 problems.<br>
 Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>  
