--- a/teaching/s2024_top1.html
+++ b/teaching/s2024_top1.html
@@ -49,8 +49,8 @@
   <b>Homework  #1</b> 11 problems.<br>
 Problems from Chapter 4: #9, 15, 16, 34, 43, 45, 53, 54, 55, 58, 64.<br><br>
 
-  <b>Homework  #2</b> 11 problems.<br>
-Problems from Chapter 5 (Part 1): #5, 9, 10, 11, 14, 16, 19, 20, 33, 35, 55, 56, 59, 60, ...<br><br>
+  <b>Homework  #2</b> 23 problems.<br>
+Problems from Chapter 5 (Part 1): #5, 9, 10, 11, 14, 16, 19, 20, 33, 35, 55, 56, 59, 60, 64, 65, 68, 69, 70, 73, 76, 78, 79<br><br>
   <!--
 
 <b>Homework  #2</b> 8 problems.<br>
