--- a/teaching/s2024_dg1.html
+++ b/teaching/s2024_dg1.html
@@ -38,7 +38,8 @@
   -->
 2024-04-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>    
 2024-04-11: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>     
-2024-04-11: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>     
+2024-04-11: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
+2024-04-10: <b>Announcements</b> The class will go online for today's 16:00 class. Watch the lecture through eCampus by April 24th.<br>    
 2024-03-24: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
 2024-03-17: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
 2024-03-17: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>    
